crates/widgets/src/overlay/search/snapshots/widgets__overlay__search__tests__search_overlay_header_counts_matches_of_the_whole_playlist.snap
---
source: crates/widgets/src/overlay/search/mod.rs
assertion_line: 396
expression: "painted(&overlay, 80, 28)"
---
"┏ SEARCH ── 7 of 1961 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ / moon_                                                                      ┃"
"┃ ───────────────────────────────────────────────────────────────────────────  ┃"
"┃ Song                                                                         ┃"
"┃ Song                                                                         ┃"
"┃ Song                                                                         ┃"
"┃ Song                                                                         ┃"
"┃ Song                                                                         ┃"
"┃ Song                                                                         ┃"
"┃ Song                                                                         ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
