crates/widgets/src/overlay/search/snapshots/widgets__overlay__search__tests__search_overlay_modal_mode_reports_the_match_count@plural.snap
---
source: crates/widgets/src/overlay/search/mod.rs
assertion_line: 419
expression: "painted(&overlay, 80, 28)"
---
"╭ SEARCH ──────────────────────────────────────────────────────────────────────╮"
"│ / a_   2 matches of 2 total                                                  │"
"│   Alpha                                                                      │"
"│ > Beta                                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
