crates/widgets/src/overlay/search/snapshots/widgets__overlay__search__tests__search_overlay_modal_mode_reports_the_match_count@singular.snap
---
source: crates/widgets/src/overlay/search/mod.rs
assertion_line: 399
expression: "rendered(80, 28, |frame|\nframe.render_widget(&overlay, frame.area())).to_string()"
---
"╭ SEARCH ──────────────────────────────────────────────────────────────────────╮"
"│ / a    1 match of 2 total                                                    │"
"│ > Alpha                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
