crates/widgets/src/overlay/search/snapshots/widgets__overlay__search__tests__search_overlay_shows_a_placeholder_when_there_are_no_matches.snap
---
source: crates/widgets/src/overlay/search/mod.rs
assertion_line: 374
expression: "rendered(80, 28, |frame|\nframe.render_widget(&overlay, frame.area())).to_string()"
---
"┏ SEARCH ── 0 of 1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ / zz                                                                         ┃"
"┃ ───────────────────────────────────────────────────────────────────────────  ┃"
"┃No matches                                                                    ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
