crates/widgets/src/overlay/search/snapshots/widgets__overlay__search__tests__search_overlay_shows_the_query_and_narrows_the_matches_in_pane_mode.snap
---
source: crates/widgets/src/overlay/search/mod.rs
assertion_line: 364
expression: "painted(&overlay, 80, 28)"
---
"┏ SEARCH ── 2 of 3 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ / moon_                                                                      ┃"
"┃ ───────────────────────────────────────────────────────────────────────────  ┃"
"┃ Moon River                                                                   ┃"
"┃ Moonlight Sonata                                                             ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
