crates/widgets/src/overlay/search/snapshots/widgets__overlay__search__tests__server_search_paints_the_search_pane_with_the_server_name_and_grouped_rows@found_floating.snap
---
source: crates/widgets/src/overlay/search/mod.rs
expression: "rendered(60, 12, |frame|\nframe.render_widget(&overlay, frame.area())).to_string()"
---
"╭ SEARCH ──────────────────────────────────────────────────╮"
"│ / moon_                                                  │"
"│ Albums                                                   │"
"│ Air — Moon Safari                                        │"
"│ Pink Floyd — The Dark Side of the Moon                   │"
"│ Tracks                                                   │"
"│ Moon River                                               │"
"│ Moonlight Sonata                                         │"
"╰──────────────────────────────────────────────────────────╯"
"                                                            "
"                                                            "
"                                                            "
